crates/lash/tests/ui/effect_host_activation_methods_are_removed.stderr
error[E0599]: no method named `emit_with_effect_host` found for struct `SessionTriggerAdmin` in the current scope
 --> tests/ui/effect_host_activation_methods_are_removed.rs:7:10
  |
5 |       let _ = session
  |  _____________-
6 | |         .triggers()
7 | |         .emit_with_effect_host("Button", "ui.button", "pressed", serde_json::json!({}), scope.controller())
  | |         -^^^^^^^^^^^^^^^^^^^^^ method not found in `SessionTriggerAdmin`
  | |_________|
  |

error[E0599]: no method named `activate_with_effect_host` found for struct `SessionTriggerAdmin` in the current scope
  --> tests/ui/effect_host_activation_methods_are_removed.rs:11:10
   |
 9 |       let _ = session
   |  _____________-
10 | |         .triggers()
11 | |         .activate_with_effect_host("trigger:1", serde_json::json!({}), scope.controller())
   | |         -^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `SessionTriggerAdmin`
   | |_________|
   |

error[E0599]: no method named `activate_source_type_with_effect_host` found for struct `SessionTriggerAdmin` in the current scope
  --> tests/ui/effect_host_activation_methods_are_removed.rs:15:10
   |
13 |       let _ = session
   |  _____________-
14 | |         .triggers()
15 | |         .activate_source_type_with_effect_host("ui.button.pressed", serde_json::json!({}), scope.controller())
   | |         -^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `SessionTriggerAdmin`
   | |_________|
   |
